--- a/index.html
+++ b/index.html
@@ -1,429 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8">
-  <title>東大VRサークルUT-virtual 春祭り2019 ば展</title>
-  <!-- Favicons -->
-  <link href="images/favicon.png" rel="shortcut icon">
-  <!-- jQuery読み込み -->
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <!-- BootstrapのCSS読み込み -->
-  <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- BootstrapのJS読み込み -->
-  <script src="./bootstrap/js/bootstrap.min.js"></script>
-  <!-- CSS読み込み -->
-  <link rel="stylesheet" type="text/css" href="./index.css">
-  <!-- JS読み込み -->
-  <script type="text/javascript" src="./index.js"></script>
-
-  <!-- <script src="sketch.js"></script> -->
-  <script src="sketch.js"></script>
-  <!-- Font awesome読み込み -->
-  <link href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" rel="stylesheet">
-
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="東大VRサークルUT-virtual 春祭り2019 ば展">
-  <meta itemprop="description" content="">
-  <meta itemprop="image" content="http://bah-exhibition.utvirtual.tech/images/MainVisual@2x.png">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="http://bah-exhibition.utvirtual.tech">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="東大VRサークルUT-virtual 春祭り2019 ば展">
-  <meta property="og:description" content="">
-  <meta property="og:site_name" content="UT_virtual">
-  <meta property="og:image" content="http://bah-exhibition.utvirtual.tech/images/MainVisual@2x.png">
-
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="東大VRサークルUT-virtual 春祭り2019 ば展">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:site" content="@UT_virtual">
-  <meta name="twitter:creator" content="@terami_fukami">
-  <meta name="twitter:domain" content="twitter.com/UT_virtual">
-  <meta name="twitter:image" content="http://bah-exhibition.utvirtual.tech/images/MainVisual@2x.png">
-
-</head>
-
-<body>
-  <div id="view1">
-  <!-- header, menu -->
-  <section id="header">
+  <head>
+    <meta charset="UTF-8">
+    <title>DAIKI TERAI</title>
+    <link href="images/profile.jpg" rel="shortcut icon">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  </head>
+  <body>
     <header>
-      <nav id = "header_menu">
-        <ul>
-            <li><a href="#top">トップ</a></li>
-            <li><a href="#intro">ば展とは</a></li>
-            <li><a href="#about">概要</a></li>
-            <li><a href="#contents">作品リスト</a></li>
-            <li><a href="#support">協賛</a></li>
-            <li><a href="#access">アクセス</a></li>
-        </ul>
+      <h1>
+        DAIKI TERAI
+      </h1>
+      <nav class="navigation">
+        <a href="index.html" style="margin-right: 10px;">
+          Works
+        </a>
+        <a href="index.html">
+          About
+        </a>
       </nav>
     </header>
-  </section>
-
-    <!-- トップの画像 -->
-    <section id="top">
-      <div id = "hero">
-        <div id = "canvas"></div>
-      </div>
-      <div class="container" id="top-container" style="background-color: transparent;">
-        <div class="row">
-          <div id = "top_image_content" class="img-responsive d-flex align-items-center col-lg-12">
-            <img id="main_visual" src = "./images/MainVisual_NoBackGround@4x.png" class="img-fluid">
-            <img id="main_smart_visual" src = "./images/forSmartPhone_NoBackGround@4x.png" class="img-fluid">
-            <!-- ./images/MainVisual_NoBackGround@4x.png
-            ./images/forSmartPhone_NoBackGround@4x.png -->
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="buffer">
-    </section>
-
-    <!-- ば展とは -->
-    <section id = "intro">
-      <div class="container">
-        <div class="row">
-          <h1 class="col-lg-12">ば展とは</h1>
-        </div>
-        <div class="row">
-          <article class="col-lg-12">
-                <p>
-                    <strong>「ば」</strong>
-                </p>
-                <p>
-                    それは、空間の広がりを表す<strong>「場」</strong>や<br />
-                    「もしーならば」に用いられる仮定の接続助詞の<strong>「ば」</strong><br />
-                    かもしれない。
-                </p>
-                <p>
-                    はたまた<strong>「バーチャル」</strong>や<strong>「媒体」</strong>などの<br />
-                    何か単語の頭文字かもしれない。
-                </p>
-                <p>
-                    もしくは、今は想像できないような意味があるのかもしれない。
-                </p>
-                <p>
-                    今回は、 東大のVR(バーチャルリアリティ)サークルであるUT-virtualが<br />作品展示会 <strong>「ば」</strong>展を開催し、<br />
-                    皆様には様々な<strong>「ば」</strong>を全身で感じ取っていただければなと思っております。
-                </p>
-          </article>
-        </div>
-      </div>
-
-    </section>
-
-
-    <!-- 概要（日時, 料金） -->
-    <section id="about">
-      <div class="container">
-        <div class="row">
-          <h1 class="col-lg-12">概要</h1>
-        </div>
-        <div class="row">
-          <table border="2" class="col-lg-6 offset-lg-3" style="text-align:center;">
-          <tr>
-              <th><p>日時</p></th>
-              <td><p>3月23日(土)、24日(日)<br />
-              10:00 - 17:00</p></td>
-          </tr>
-          <tr>
-              <th><p>会場</p></th>
-              <td><p>東京大学情報学環オープンスタジオ<br />
-                  中山未来ファクトリー</p></td>
-          </tr>
-          <tr>
-              <th><p>料金</p></th>
-              <td><p>無料</p></td>
-          </tr>
-          <tr>
-              <th><p>主催</p></th>
-              <td><p><a href="http://utvirtual.tech/" target="_blank">東大VRサークルUT-virtual</a></p></td>
-          </tr>
-          </table>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- 作品例 -->
-
-    <section id="contents">
-      <div class="container">
-        <div class="row">
-          <h1 class="col-lg-12">作品リスト</h1>
-        </div>
-        <div class="row">
-            <div class="contents_value col-lg-4 col-6">
-                <img id="image1" class="img-fluid" src="./images/IMG_0452.jpg" value="1">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image2" class="img-fluid" src="./images/IMG_0453.jpg" value="2">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image3" class="img-fluid" src="./images/IMG_0479.jpg" value="3">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image4" class="img-fluid" src="./images/IMG_0496.jpg" value="4">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-                <img id="image5" class="img-fluid" src="./images/IMG_0487.jpg" value="5">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image6" class="img-fluid" src="./images/IMG_0489.jpg" value="6">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image7" class="img-fluid" src="./images/IMG_0493.jpg" value="7">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image8" class="img-fluid" src="./images/IMG_0482.jpg" value="8">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image9" class="img-fluid" src="./images/IMG_0531.jpg" value="9">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image10" class="img-fluid" src="./images/IMG_0491.jpg" value="10">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image11" class="img-fluid" src="./images/IMG_0515.jpg" value="11">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image12" class="img-fluid" src="./images/IMG_0486.jpg" value="12">
-            </div>
-            <div class="contents_value col-lg-4 col-6">
-              <img id="image13" class="img-fluid" src="./images/IMG_0525.jpg" value="13">
-            </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- 協賛 -->
-    <section id="support">
-      <div class="container">
-        <div class="row">
-          <h1 class="col-lg-12">協賛</h1>
-        </div>
-        <div class="row">
-            <div class="contents_value col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-12">
-              <img id="supportCompany" class="img-fluid" src="./images/solidray.png">
-            </div>
-            <div class="contents_value col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-12">
-              <img id="supportCompany" class="img-fluid" src="./images/tsukumo.png">
-            </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- 場所, 交通手段 -->
-    <section id="access">
-      <div class="container">
-        <div class="row">
-          <h1 class="col-lg-12">アクセス</h1>
-        </div>
-        <div class="row">
-          <div id="accessURL" class="col-lg-6 offset-lg-3">
-            <div id="accessInfo" class="border border-secondary">
-            <p>東京メトロ丸ノ内線本郷三丁目駅 徒歩13分</p>
-            <p>東京メトロ千代田線湯島駅 徒歩22分</p>
-            <p>東京メトロ南北線東大前駅 徒歩15分</p>
-            </div>
-            <br>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2290.7310732401384!2d139.75974369152937!3d35.71187917137413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c3a9efce7d5%3A0xc84b2e33eca4b581!2z5p2x5Lqs5aSn5a2m5oOF5aCx5a2m55Kw44Kq44O844OX44Oz44K544K_44K444Kq!5e0!3m2!1sja!2sjp!4v1549968614604"
-            width="515" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <p style="font-size:12px;text-align:start;">〒113-0033<br />
-            東京都文京区本郷7-3-1
-            東京大学 本郷キャンパス 情報学環本館地下1階</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- playground -->
-    <section id="buffer">
-    </section>
-
-    <!-- fotter -->
-    <section id="footer">
-          <!-- <a href="http://twitter.com/share?url=http://" class="btn twitter" target="_blank"> <span class="fab fa-twitter"></span></a>
-          <a href="https://www.facebook.com/sharer/sharer.php?u=http://" class="btn facebook" target="_blank"><span class="fab fa-facebook"></span></a>
-          <a href="https://www.instagram.com/?hl=ja" class="btn instagram" target="_blank"><span class="fab fa-instagram"></span></a> -->
-          <p> Copyright © UT-virtual All Rights Reserved. </p>
-    </section>
-    <nav class="clone_nav"></nav>
+    <div id="work">
+      <section class="item">
+        <img src="images/test.jpg">
+      </section>
+      <section class="item">
+        <img src="images/test.jpg">
+      </section>
     </div>
-
-
-    <div id="view2">
-    <div class="modal-overlay">
-    <div id="modal-contents-1" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0452.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「二重人殻」</strong><br/><br>
-            来場者の姿をスキャンして生み出したドッペルゲンガーと、バーチャル空間で対峙する作品。<br/>
-            同じ事象でも、他人事/自分事と視点によって見え方は変わってしまうけど、分身をパートナー化出来たら、我々は新たな眼差しを得られるだろうか。<br/><br>
-          <small>yunoLv3 / Yuji Hatada</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-2" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0453.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「BABEL UP!!」</strong><br/><br>
-            神になって人類の叡智をぶっ壊せ！！！バベルの塔ぶっ壊しVRアーケードゲームがここに登場！！<br/><br>
-          <small>平井龍之介</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-3" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0479.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「ご〜すとばすた〜ず」</strong><br/><br>
-            暗闇の中を一本のライトを頼りに謎を解きながらお化けを退治して館の脱出をめざすアドベンチャーゲームです。<br/>
-            あなたは無事脱出することができるのか!?<br/><br>
-          <small>西澤優人/山口俊太郎/齋藤真/尾形一輝</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-4" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0496.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「みんなデスクトップでしかプレイしないゲームを一人だけVRでプレイして無双する」</strong><br/><br>
-            デスクトップでプレイするようなPVPゲームにVRプレイヤーが混ざってたらどうなるでしょうか？無双する？ボロ負けする？気になったので作ってみることにしました！<br/>
-            剣と魔法のPVPゲームにする予定だよ！<br/><br>
-          <small>銭本友樹</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-5" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0487.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「電気椅子VR」</strong><br/><br>
-            昨今のバーチャルリアリティデバイスのもたらす電子空間での三次元的自由駆動にあえて拘束を課すことで、体験の本質を追求した作品である。<br/>
-            バーチャル・フィジカル空間両方から与えられる刺激で増していく緊迫感をぜひ楽しんでほしい。<br/><br>
-          <small>中川雅人/平井龍之介/所壮琉</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-6" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0489.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「A Boxes」</strong><br/><br>
-            箱だよ．<br/><br>
-          <small>トドロキけんと</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-7" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0493.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「Let's hatch」</strong><br/><br>
-            あなたは卵の中にいます．</br>そこにあるのは，卵の殻，それに自分だけ．外には何があるんだろう？</br>今こそ，新たな世界と出会うとき．<br/><br>
-          <small>工藤龍</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-8" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0482.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「VTuberAkushu」</strong><br/><br>
-            ヘッドマウントディスプレイと触覚コントローラーを使い、VRでバーチャルアバターユーザーと握手してのコミュニケーションができます。</br>
-            バーチャルな「触れ合い」を是非体験してみてください。<br/><br>
-      <small>onchima</small></p></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-9" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0531.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「X-Shadow」</strong><br/><br>
-            影は時折自分自身の分身のような存在として捉えられる。<br/>
-            子供の頃にした「影ふみ鬼」という遊びのように。</br>
-            「影踏み鬼」では、影を鬼に踏まれると鬼と逃げる者の役割が入れ替わる。</br>
-            もう一つの自分、「影」。入れ替わると人は何を思うのだろう。<br/><br>
-            <small>大西彬介</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-10" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0491.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「スト〇ングゼロVR」</strong><br/><br>
-            鬱。政治不信。人間世界は悩みで溢れている。</br>
-            一部の人々はこれらの悩みをスト〇ングを摂取することで頭の中から消失させているという。</br>
-            当展示ではVR空間内でスト〇ングゼロを摂取し、悩みを消失させるという体験をしてもらう。</br><br>
-            <small>森智之</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-11" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0515.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「視点移動」</strong><br/><br>
-            VR空間の中で物理的に視点を変える体験です。</br>
-            異なる角度、異なる位置、異なる大きさで見た世界はきっと新しい発見があるはず…</br><br>
-            <small>余合彩子</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-12" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0486.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「Bloom!」</strong><br/><br>
-            もしも、動かないものがバーチャル空間内で表情をもってあなたにはたらきかけてきたら、それが心を持っているように思えるでしょうか。</br>
-            この作品では、HMDをかぶるとバラが表情豊かに動きます。</br><br>
-            <small>奥田知華</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-contents-13" class="container" style="background-color: transparent;">
-      <div class="row img-responsive d-flex align-items-center">
-        <div class="modal-contents">
-          <img src = "./images/IMG_0525.jpg" class="img-fluid col-lg-8 offset-lg-2" id="descriptionImg">
-          <p class="col-lg-8 offset-lg-2" id="description"><strong>「テンプレ・ラン」</strong><br/><br>
-            素材はできるだけシンプルに、疾走感を演出します。</br><br>
-            <small>今井幹生</small></p>
-        </div>
-      </div>
-    </div>
-
-    <image src="images/backButton.png" id="buckBottn">
-  </div>
-    </div>
-
-    <!-- p5js読み込み -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
-    <!-- p5js.dom読み込み -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
-</body>
-
+  </body>
 </html>
