エフェクトの追加

--- a/public/index.html
+++ b/public/index.html
@@ -44,21 +44,22 @@
     </div>
 
     <div id="work">
-      <section class="item">
+      <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/rakugaki.jpg">
-      </section>
-      <section class="item">
+        <p>articles/rakugaki.html</p>
+      </article>
+      <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/tapin.jpg">
-      </section>
-      <section class="item">
+      </article>
+      <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/utvj.jpg">
-      </section>
-      <section class="item">
+      </article>
+      <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/baten.jpg">
-      </section>
-      <section class="item">
+      </article>
+      <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/aquarium.jpg">
-      </section>
+      </article>
     </div>
   </body>
 </html>
