--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,11 @@
       </article>
       <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/tapin.jpg">
+        <p>articles/TapInMonopo.html</p>
       </article>
       <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/utvj.jpg">
+        <p>articles/utvj.html</p>
       </article>
       <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/baten.jpg">
