--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,11 @@
       </article>
       <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/baten.jpg">
+        <p>articles/baten.html</p>
       </article>
       <article class="item">
         <img class="lazy" src="images/test.jpg" data-src="images/aquarium.jpg">
+        <p>articles/aquarium.html</p>
       </article>
     </div>
   </body>
