--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
           $("img.lazy").lazyload();
       });
     </script>
+    <script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?5e3c0dde7eb84695a23e23e8ac1e0217" charset="utf-8"></script>
   </head>
   <body>
     <header>
