textの細かい修正

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div id="about" style="display: none;">
       <div>
         <h2>about me</h2>
-        <p>98年生まれ. 千葉大学在籍. UnityとTouchDesignerが得意. 楽天イーグルスを愛している.</p>
+        <p>98年生まれ. 千葉大学在籍. 42tokyo在籍. UnityとTouchDesignerが得意. 楽天イーグルスを愛している.</p>
       </div>
       <div>
         <h2>language</h2>
@@ -39,7 +39,7 @@
       </div>
       <div>
         <h2>contact</h2>
-        <a href="https://twitter.com/terami_fukami" target="_brank"></a>
+        <a href="https://twitter.com/dterai_yeah" target="_brank"></a>
       </div>
       </div>
     </div>
